# musica

./: .gitignore  .taurignore  Cargo.toml  README.md
.github/workflows/: musica-vj.yml
apps/musica-vj/: README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/musica-vj/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/musica-vj/src-tauri/capabilities/: default.json  dj-controls.json
apps/musica-vj/src-tauri/icons/: icon.icns
apps/musica-vj/src-tauri/src/: broadcast_provider.rs  cognitum_provider.rs  controller_bridge.rs  creative_provider.rs  lib.rs  lyria_provider.rs  lyria_realtime_provider.rs  main.rs  meta_llm_provider.rs  process_util.rs  restream_provider.rs  sandbox.rs
docs/: index.html  manifest.json  sw.js
docs/adr/: ADR-143-hearmusica-tympan-rust-port.md  ADR-144-candle-whisper-musica-transcription.md  ADR-145-clipcannon-rust-exploration.md  ADR-146-clipcannon-ddd-architecture.md  ADR-147-clipcannon-prosody-emotion-speaker.md  ADR-148-clipcannon-benchmark-methodology.md  ADR-149-clipcannon-binaural-localization.md  ADR-150-clipcannon-vad-end-of-turn.md  ADR-151-clipcannon-emotion-vector-music-speech.md  ADR-152-clipcannon-event-sink.md  ADR-153-clipcannon-sota-optimization.md  ADR-154-clipcannon-singing-analysis.md  ADR-155-clipcannon-klatt-formant-synth.md  ADR-156-clipcannon-phonemiser-g2p.md  ADR-158-clipcannon-singing-synthesis.md  ADR-159-clipcannon-streaming-tts-pipeline.md  ADR-160-musica-vj-tauri-subproject-boundary.md  ADR-161-web-audio-sample-clock-and-offline-musica-dsp.md  ADR-162-logitech-actions-sdk-controller-bridge.md  ADR-163-threejs-webgl2-visual-engine.md  ADR-164-governed-creative-ai-provider-boundary.md  ADR-165-live-social-capture-and-deterministic-export.md  ADR-166-desktop-threat-model-and-security-boundaries.md  ADR-167-quality-performance-and-macos-release-gates.md  ADR-168-lyria-3-pro-provider-routing-and-prompt-contract.md  ADR-169-lyria-paid-job-assets-analysis-and-provenance.md  ADR-170-lyria-realtime-live-performance-provider.md  ADR-171-ai-instrument-bank-and-auto-dj-sequencing.md  ADR-172-lyria-realtime-multistream-decks.md  ADR-173-first-run-performance-profile-and-lyria-previews.md  ADR-174-restream-native-live-output.md  ADR-175-cognitum-oauth-and-expanded-meta-llm-capabilities.md  ADR-176-performance-memory-and-ecosystem-review.md  ADR-177-ai-generated-visual-plugins.md  ADR-178-metered-lyria-via-cognitum-proxy.md  ADR-179-sign-in-and-lyria-works-credential-broker.md  ADR-180-extension-system-for-integrations-sensors-camera-plugins.md  (+3 more)
examples/: clipcannon_bench.rs
scripts/: check_wasm.sh  download_test_audio.sh
src/: adaptive.rs  advanced_separator.rs  audio_graph.rs  benchmark.rs  crowd.rs  enhanced_separator.rs  evaluation.rs  hearing_aid.rs  lanczos.rs  learned_weights.rs  lib.rs  main.rs  multi_res.rs  multitrack.rs  musdb_compare.rs  neural_refine.rs  phase.rs  real_audio.rs  separator.rs  spatial.rs  stft.rs  streaming_multi.rs  transcriber.rs  visualizer.rs  wasm_bridge.rs  wav.rs
test_audio/: .gitignore
wasm/: index.html
(+173 files in other folders)
