[package]
name = "musica-vj"
version = "0.2.0"
description = "Real-time music synthesis and visual performance studio"
authors = ["Musica contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/musica"

[lib]
name = "musica_vj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
musica = { path = "../../.." }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.27", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
